feat(deletion): delete feature cart item
