# docs/swagger.json
@@ -49,39 +49,6 @@
                         "description": "OK"
                     }
                 }
-            },
-            "delete": {
-                "description": "delete item/produk from cart",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "cart"
-                ],
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "cart_id uuid",
-                        "name": "cart_id",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "kodeProduk uuid",
-                        "name": "product_code",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK"
-                    }
-                }
             }
         },
         "/carts/{cart_id}/items": {
@@ -150,6 +117,41 @@
                         "schema": {
                             "$ref": "#/definitions/transport.ItemRequest"
                         }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
+        "/carts/{cart_id}/{product_code}": {
+            "delete": {
+                "description": "delete item/produk from cart",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "cart"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "cart_id uuid",
+                        "name": "cart_id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "kodeProduk uuid",
+                        "name": "product_code",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
